--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
   },
   "babel": {
     "env": {
